Many notable changes. Minor-version up

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbase-html5-sdk",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "JavaScript client library for Goblin Backend server",
   "main": "index.js",
   "scripts": {
@@ -13,27 +13,28 @@
   },
   "homepage": "https://gbase.tech/",
   "dependencies": {
-    "crc-32": "^1.2.0",
-    "crypto-js": "^3.1.9-1",
-    "eventemitter3": "^3.1.2",
-    "isomorphic-ws": "^4.0.1",
-    "object-path": "^0.11.4",
-    "superagent": "^5.0.5",
-    "ws": "^7.0.0"
+    "crc-32": "1.2.0",
+    "crypto-js": "3.1.9-1",
+    "eventemitter3": "3.1.2",
+    "isomorphic-ws": "4.0.1",
+    "object-path": "0.11.4",
+    "store": "2.0.12",
+    "superagent": "5.0.5",
+    "ws": "7.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "browserify": "^16.2.3",
-    "chai": "^4.2.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
-    "mocha": "^6.1.4",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
+    "browserify": "16.2.3",
+    "chai": "4.2.0",
+    "gulp": "4.0.2",
+    "gulp-babel": "8.0.0",
+    "gulp-rename": "1.4.0",
+    "gulp-uglify": "3.0.2",
+    "gulp-util": "3.0.8",
+    "mocha": "6.1.4",
+    "vinyl-buffer": "1.0.1",
+    "vinyl-source-stream": "2.0.0"
   },
   "repository": {
     "type": "git",
