--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbase-html5-sdk",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "JavaScript client library for Goblin Backend server",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
+    "async": "^3.1.0",
     "browserify": "16.2.3",
     "chai": "4.2.0",
     "gulp": "4.0.2",
