--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mocha": "6.1.4",
     "vinyl-buffer": "1.0.1",
     "vinyl-source-stream": "2.0.0",
-    "goblin-base-server": "0.1.0"
+    "goblin-base-server": "^0.1.0"
   },
   "repository": {
     "type": "git",
