--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crc-32": "1.2.0",
     "crypto-js": "3.1.9-1",
     "eventemitter3": "3.1.2",
+    "goblin-base-server": "file:../goblin-base-server",
     "isomorphic-ws": "4.0.1",
     "object-path": "0.11.4",
     "store": "2.0.12",
@@ -35,8 +36,7 @@
     "gulp-util": "3.0.8",
     "mocha": "6.1.4",
     "vinyl-buffer": "1.0.1",
-    "vinyl-source-stream": "2.0.0",
-    "goblin-base-server": "^0.1.0"
+    "vinyl-source-stream": "2.0.0"
   },
   "repository": {
     "type": "git",
